// Copyright 2022 The Engula Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package engula.server.v1;

import "engula/v1/engula.proto";
import "engula/server/v1/error.proto";
import "engula/server/v1/metadata.proto";

service Node {
  rpc Batch(BatchRequest) returns (BatchResponse) {}
  rpc GetRoot(GetRootRequest) returns (GetRootResponse) {}
  rpc CreateReplica(CreateReplicaRequest) returns (CreateReplicaResponse) {}
}

message BatchRequest {
  uint64 node_id = 1;
  repeated GroupRequest requests = 2;
}

message BatchResponse { repeated GroupResponse responses = 1; }

message GroupRequest {
  uint64 group_id = 1;
  uint64 shard_id = 2;
  GroupRequestUnion request = 3;
}

message GroupResponse {
    GroupResponseUnion response = 1;

    /// Only used in BatchResponse.
    Error error = 2;
}

message GroupRequestUnion {
  oneof request {
    engula.v1.GetRequest get = 1;
    engula.v1.PutRequest put = 2;
    engula.v1.DeleteRequest delete = 3;
    BatchWriteRequest batch_write = 4;

    /// Add a new shard to an existing group.
    CreateShardRequest create_shard = 5;

    /// Change replicas of an existing group.
    ChangeReplicasRequest change_replicas = 6;
  }
}

message GroupResponseUnion {
  oneof response {
    engula.v1.GetResponse get = 1;
    engula.v1.PutResponse put = 2;
    engula.v1.DeleteResponse delete = 3;
    BatchWriteResponse batch_write = 4;
    CreateShardResponse create_shard = 5;
    ChangeReplicasResponse change_replicas = 6;
  }
}

/// Execute batch write to a shard to ensure atomic writes.
///
/// Since the interface does not need to be exposed to users, the definition is placed in
/// this file.
message BatchWriteRequest {
  repeated engula.v1.DeleteRequest deletes = 1;
  repeated engula.v1.PutRequest puts = 2;
}

message BatchWriteResponse {}

message GetRootRequest {}

message GetRootResponse { repeated string addrs = 1; }

message CreateReplicaRequest {
  uint64 replica_id = 1;
  GroupDesc group = 2;
}

message CreateReplicaResponse {}

message CreateShardRequest {
  ShardDesc shard = 1;
}

message CreateShardResponse {}

message ChangeReplicasRequest {
  ChangeReplicas change_replicas = 1;
}

message ChangeReplicasResponse {}

message ChangeReplicas {
  repeated ChangeReplica changes = 1;
}

message ChangeReplica {
  ChangeReplicaType change_type = 1;

  uint64 replica_id = 2;
  uint64 node_id = 3;
}

enum ChangeReplicaType {
  ADD = 0;
  REMOVE = 1;
  ADD_LEARNER = 2;
}
